# saregamaPIC

./: .dockerignore  .gitattributes  .gitignore  .railwayignore  AGENTS.md  Dockerfile  README.md  compose.yaml  railway.json
.codex/agents/: app-builder.toml  notation-sensei.toml  scan-wrangler.toml
.github/workflows/: ci.yml  deploy-dev.yml  promote.yml
backend/: pyproject.toml
backend/app/: auth.py  config.py  db.py  learning.py  main.py  recognition.py  schemas.py  security.py  stf.py  storage.py
backend/app/migrations/: 001_init.sql  002_transcription_metrics.sql  003_identity_and_ownership.sql  004_security_controls.sql  005_recognition_learning.sql
backend/app/routers/: learning.py  scans.py  songs.py  transcriptions.py
backend/scripts/: evaluate_recognition.py
backend/tests/: test_api.py  test_auth.py  test_learning.py  test_recognition.py  test_stf.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  Editor.test.tsx  stfEdit.test.ts  stfEdit.ts  stfTranspose.test.ts  stfTranspose.ts  styles.css  test-setup.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: StfLineText.tsx
frontend/src/pages/: EditorPage.tsx  PageViewer.tsx  SongPage.tsx  SongsPage.tsx
samples/: README.md
scripts/: dev.ps1  make_icons.py
